<resources>
    <string name="app_name">SuperCalculator</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="Button0">0</string>
    <string name="ButtonDot">.</string>
    <string name="ButtonEqual">=</string>
    <string name="ButtonPlus">+</string>
    <string name="ButtonMinus">-</string>
    <string name="ButtonMultiply">*</string>
    <string name="ButtonDivision">/</string>
    <string name="ThemeSwitch">Dark theme</string>
    <string name="lighttheme">LightTheme</string>
    <string name="darktheme">DarkTheme</string>
</resources>