<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image2"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultField"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:background="#F1F1F1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultField"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.3"/>

    <Button
        android:id="@+id/button8"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Button8"
        app:layout_constraintTop_toBottomOf="@+id/resultField"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintBottom_toTopOf="@id/button5"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/button9"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Button9"
        app:layout_constraintTop_toBottomOf="@+id/resultField"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintEnd_toStartOf="@id/buttonDivision"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/buttonDivision"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="20dp"
        android:text="@string/ButtonDivision"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@+id/resultField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonMultiply"/>

    <Button
        android:id="@+id/button4"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/button5"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Button5"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintBottom_toTopOf="@id/button2"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <Button
        android:id="@+id/button6"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Button6"
        app:layout_constraintEnd_toStartOf="@id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:layout_constraintBottom_toTopOf="@id/button3"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <Button
        android:id="@+id/buttonMultiply"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/ButtonMultiply"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivision"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonPlus"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <Button
        android:id="@+id/button1"
        style="?attr/materialButtonOutlinedStyle"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/button2"
        style="?attr/materialButtonOutlinedStyle"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Button2"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@id/button3"

        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/button3"
        style="?attr/materialButtonOutlinedStyle"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Button3"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintEnd_toStartOf="@id/buttonPlus"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/buttonPlus"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/ButtonPlus"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/button0"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Button0"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonEqual"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/buttonEqual"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/ButtonEqual"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"/>

</androidx.constraintlayout.widget.ConstraintLayout>